--- a/deepdigger/index.html
+++ b/deepdigger/index.html
@@ -5,6 +5,7 @@
     <script src="p5/p5.min.js"></script>
     <script src="game/game.js"></script>
     <script src="game/ui-elements/button.js"></script>
+    <script src="game/ui-elements/floatingContainer.js"></script>
     <script src="index.js"></script>
     <style>
         body, html {
@@ -12,6 +13,9 @@
             overflow: hidden;
         }
     </style>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#a0a0a0">
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>
 <body>
 
