--- a/deepdigger/index.html
+++ b/deepdigger/index.html
@@ -11,11 +11,12 @@
         body, html {
             margin: 0;
             overflow: hidden;
+            overscroll-behavior: contain;
         }
     </style>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#a0a0a0">
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
 </head>
 <body>
 
