try fixing button position

--- a/deepdigger/index.html
+++ b/deepdigger/index.html
@@ -6,6 +6,7 @@
     <script src="game/game.js"></script>
     <script src="game/ui-elements/button.js"></script>
     <script src="game/ui-elements/floatingContainer.js"></script>
+    <script src="game/ui-elements/gameObject.js"></script>
     <script src="index.js"></script>
     <style>
         body, html {
