--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Welcome to the Internet!</title>
+    <link rel="icon" href="animated_favicon.gif" type="image/gif" >
 <style>
     body {
         width: 35em;
