--- a/deepdigger/index.html
+++ b/deepdigger/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>DEEPDIGGER</title>
-    <script src="p5/p5.min.js"></script>
+    <script src="../p5/p5.min.js"></script>
     <script src="game/game.js"></script>
     <script src="game/ui-elements/button.js"></script>
     <script src="game/ui-elements/floatingContainer.js"></script>
