--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </style>
 </head>
 <body>
-	<h1><a href="https://b4fb.de/">Welcome to the internet my friend!<a></h1>
+	<h1><a href="https://b4fb.de/">Welcome to the INTERNET!!!!<a></h1>
 </body>
 </html>
