--- a/gg-gangster/index.html
+++ b/gg-gangster/index.html
@@ -5,6 +5,6 @@
     <title>GoodGame gangster</title>
 </head>
 <body>
-    <iframe width="800" height="600" src="http://media.goodgamestudios.com/games/mafia/"></iframe>
+    <iframe width="800" height="600" src="https://media.goodgamestudios.com/games/mafia/"></iframe>
 </body>
 </html>
