--- a/gg-gangster/index.html
+++ b/gg-gangster/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GoodGame gangster</title>
+    <title>GGG</title>
 </head>
 <body>
     <iframe width="800" height="600" src="https://media.goodgamestudios.com/games/mafia/"></iframe>
